Port the mod to Minecraft 1.20.1 on Fabric and Forge.
Retarget dependencies and APIs for 1.20.1 (NBT blueprints, datapack paths, recipe JSON, shaders) and fix deploy leftover hologram colliders.

Co-authored-by: Cursor <cursoragent@cursor.com>